Some bugfixes, new layout/style for image search results:  * removed divide by zero bug when 20_dhtdistribution_busysleep is 0  * replaced German comment with wrong charset in source/de/anomic/plasma/plasmaCrawlBalancer.java by an English one  * replaced the table-fix for floating behind snipped images by a br with clear  * removed unnecessary old xhtml-files (were not in use, they were created when we weren't having xhtml for testing)  * new layout for image-search results: replaced the old one with spans and tables inside (not valid) with new divs, now each image snippet container has the same size TODO:  * the ids of the snippetLoading-divs aren't valid because ids must start with an alphabetic letter or an underscore, they have to be prefixed  * in the returned snippet-xml is an unresolved pattern for status (the status is only set for text snippets)
git-svn-id: https://svn.berlios.de/svnroot/repos/yacy/trunk@3566 6c8d7289-2bf4-0310-a012-ef5d649a1542

--- a/htroot/env/base.css
+++ b/htroot/env/base.css
@@ -194,12 +194,25 @@ tt, *.tt {
 .diff .added { font-family: monospace; }
 .diff .deleted { font-family: monospace; text-decoration: line-through; }
 
-.imgtable {
-  margin: 1px;
-  padding: 1px;
+.thumbcontainer {
+  margin: 2px;
   width: 100px;
-  border: 0px solid #aaaaaa;
+  height: 160px; /* 96px thumbnail + some lines of text */
   float: left;
+}
+
+.thumblink {
+  display:block;
+  width: 96px;
+  height: 96px;
+  margin: 2px;
+  line-height: 96px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.thumblink img {
+  vertical-align: bottom;
 }
 
 .hides .hoverShow {
